Edge Loop Slide Correct UV random vertex Pin on the UV #46694

Closed
opened 2015-11-04 20:22:18 +01:00 by Evandro Costa · 12 comments

{F251892}System:
Windows 8.1 on two computers, graphics cards: nvidia gt210 and nvidia gt660

Searched everywhere for a similar bug, but didn't find anyone that refers to UV vertex pinning due to Correct UV's option.

Blender:
Broken: 2.76 x64 48f7dd6 (installed)
Broken: 2.75 x64 (zip)
Worked: 2.73 x64 (zip)

Description:
Sliding an edge loop and after that activating Correct UVs will randomly cause some of the selected loop's UV vertex to be pinned in the UV Image Editor (as if you had selected them and pressed 'P').

To reproduce (most of the times):

  • open blender
  • create a cube
  • mark seams and open the cube's UV map
  • Ctrl+'R' to create an edge loop on the cube, right click to confirm and cancel the auto slide
  • With the loop still selected, Double 'G' to slide the loop, left click to confirm the slide where it is (I managed to reproduce both moving and not moving the edge)
  • With the loop still selected, Click on Correct UV's
  • On the UV Image Editor, some random vertices of the selected loop will be pinned
  • Sometimes if no vertices were pinned after that, using edge slide a second time will make all the loop vertices be then pinned.

Is this a feature (an inconsistent one) that I'm unaware of, or is it indeed a bug?

{[F251892](https://archive.blender.org/developer/F251892/276slidebug.jpg)}System: Windows 8.1 on two computers, graphics cards: nvidia gt210 and nvidia gt660 Searched everywhere for a similar bug, but didn't find anyone that refers to `UV vertex pinning` due to Correct UV's option. Blender: `Broken:` 2.76 x64 48f7dd6 (installed) `Broken:` 2.75 x64 (zip) **Worked**: 2.73 x64 (zip) Description: Sliding an edge loop and after that activating Correct UVs will randomly cause some of the selected loop's UV vertex to be pinned in the UV Image Editor (as if you had selected them and pressed 'P'). `To reproduce ` (most of the times): - open blender - create a cube - mark seams and open the cube's UV map - Ctrl+'R' to create an edge loop on the cube, right click to confirm and cancel the auto slide - With the loop still selected, Double 'G' to slide the loop, left click to confirm the slide where it is (I managed to reproduce both moving and not moving the edge) - With the loop still selected, Click on Correct UV's - On the UV Image Editor, some random vertices of the selected loop will be pinned - Sometimes if no vertices were pinned after that, using edge slide a second time will make all the loop vertices be then pinned. Is this a feature (an inconsistent one) that I'm unaware of, or is it indeed a bug?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EvandroFerreiradaCosta

Added subscriber: @EvandroFerreiradaCosta

#46744 was marked as duplicate of this issue

#46744 was marked as duplicate of this issue
Campbell Barton self-assigned this 2015-11-05 11:58:40 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Please attach a blend file at the point which sliding isn't working properly.

Please attach a blend file at the point which sliding isn't working properly.
Author

In #46694#345382, @ideasman42 wrote:
Please attach a blend file at the point which sliding isn't working properly.

I've checked and it seems to be possible to replicate it using the default cube in any brand new file.
Just open blender with the default cube and follow the steps on the cube and you will be good.
I can record a video If you like.

But I can also attach a blend file with the default cube if you want, but it is a waste of time IMO.

Regards.

> In #46694#345382, @ideasman42 wrote: > Please attach a blend file at the point which sliding isn't working properly. I've checked and it seems to be possible to replicate it using the default cube in any brand new file. Just open blender with the default cube and follow the steps on the cube and you will be good. I can record a video If you like. But I can also attach a blend file with the default cube if you want, but it is a waste of time IMO. Regards.

@EvandroFerreiradaCosta, just tried again and still cant redo.

@EvandroFerreiradaCosta, just tried again and still cant redo.

This issue was referenced by 69674f3875

This issue was referenced by 69674f387569bddafc27227ba3e104a262301a44

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @PawelLyczkowski-1

Added subscriber: @PawelLyczkowski-1
Author

Hi there.

You probably already solved it, but in response to your "still can't redo" comment, I recorded a video of the problem:

Regards
uvloop.avi

Hi there. You probably already solved it, but in response to your `"still can't redo"` comment, I recorded a video of the problem: Regards [uvloop.avi](https://archive.blender.org/developer/F254076/uvloop.avi)

Commit 69674f3875 fixed this.

Note the error was incorrect memory access, so it wouldn't happen on all systems.

Commit 69674f3875 fixed this. Note the error was incorrect memory access, so it wouldn't happen on all systems.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46694
No description provided.