Fix T46694: UVLoop incorrectly copied flag

Error in copying customdata flag lead to pin being randomly enabled.